no container on the hero and main html tag

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <header class="container hero">
+    <header class="hero">
         <h1 class="text-uppercase">Milligram Shenanigans!</h1>
     </header>
-    <section class="container background">
+    <main class="background">
         <div class="row">
             <article class="column column-33">
                 <h3>HALO</h3>
@@ -99,7 +99,7 @@
              <a href="#">  <input class="button button-clear" value="Clear Button" type="submit"></a> 
             </article>
         </div>
-    </section>
+    </main>
 </body>
 
 </html>
