back to container class on hero and main

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-    <header class="hero">
+    <header class=" container hero">
         <h1 class="text-uppercase">Milligram Shenanigans!</h1>
     </header>
-    <main class="background">
+    <main class="container background">
         <div class="row">
             <article class="column column-33">
                 <h3>HALO</h3>
                 <figure>
                     <img src="img/halo-3-odst.jpg" alt="HALO">
-                </figure>
+                </figure> 
                 <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -32,7 +32,7 @@
                 <figure>
                     <img src="img/CSGO.png" alt="CSGO">
                 </figure>
-                <p>
+                <p">
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -89,14 +89,17 @@
             </article>
         </div>
          <div class="row">
-            <article class="column">
+            <article class="column column-25">
                <a class="button" href="#">Default Button</a>
             </article>
-            <article class="column">
+            <article class="column column-25">
                <a href="#"> <button class="button button-outline">Outlined Button</button></a>
             </article>
-            <article class="column">
+            <article class="column column-25">
              <a href="#">  <input class="button button-clear" value="Clear Button" type="submit"></a> 
+            </article>
+             <article class="column column-25">
+               <a class="button" href="#">Another Default Button</a>
             </article>
         </div>
     </main>
